--- a/bcmalassez.htm
+++ b/bcmalassez.htm
@@ -54,7 +54,7 @@
 <body>
     <div class="container">
         <div id="quadrant1">
-          💻  BIOTECH CODING SANDBOX.
+          💻  BIOTECH CODING SANDBOX..
         </div>
         <div id="quadrant2">
             <iframe src="https://editor.p5js.org/Aya_Riad/full/8nLZYadKR" width=640 height=360></iframe>
