--- a/bcmalassez.htm
+++ b/bcmalassez.htm
@@ -57,8 +57,9 @@
           💻  BIOTECH CODING SANDBOX..
         </div>
         <div id="quadrant2">
-            <iframe src="https://editor.p5js.org/frank.yates/full/rAUPOJQs0" width=640 height=360></iframe>
-
+<CENTER>
+            <iframe src="https://editor.p5js.org/frank.yates/full/rAUPOJQs0" width=800 height=600></iframe>
+</CENTER>
         </div>
     </div>
 </body>
