--- a/bcmalassez.htm
+++ b/bcmalassez.htm
@@ -58,7 +58,7 @@
         </div>
         <div id="quadrant2">
 <CENTER>
-            <iframe src="https://editor.p5js.org/frank.yates/full/rAUPOJQs0" width=800 height=600></iframe>
+            <iframe src="https://editor.p5js.org/frank.yates/full/rAUPOJQs0"></iframe>
 </CENTER>
         </div>
     </div>
