--- a/bcmalassez.htm
+++ b/bcmalassez.htm
@@ -20,23 +20,16 @@
             padding: 10px;
             font-size: 30px;
             color: white;
-            flex: 0,1;
+            flex: 0 1 auto;
             font-family: Arial, sans-serif;
             font-weight: bold;
         }
         #quadrant2 {
-            flex: 8;
+            flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
         }
-        
-        .iframe-container {
-
-
-            margin-top: -200px; /* Shift the iframe content up by 50px*/
-}
-            
         iframe {
             width: 100%;
             height: 100%;
@@ -54,12 +47,10 @@
 <body>
     <div class="container">
         <div id="quadrant1">
-          💻  BIOTECH CODING SANDBOX..
+            💻  BIOTECH CODING SANDBOX !
         </div>
         <div id="quadrant2">
-<CENTER>
-           <iframe src="https://editor.p5js.org/frank.yates/full/rAUPOJQs0"></iframe>
-</CENTER>
+            <iframe src="https://editor.p5js.org/frank.yates/full/rAUPOJQs0"></iframe>
         </div>
     </div>
 </body>
