--- a/bcmalassez2.html
+++ b/bcmalassez2.html
@@ -47,10 +47,10 @@
 <body>
     <div class="container">
         <div id="quadrant1">
-            💻  BIOTECH CODING SANDBOX!
+            💻  BIOTECH CODING SANDBOX!!
         </div>
         <div id="quadrant2">
-            <iframe src="https://editor.p5js.org/frank.yates/full/rAUPOJQs0" width="800px" height="600px" frameborder="0" style="display: block; margin: 0 auto;"></iframe>
+            <iframe src="https://editor.p5js.org/frank.yates/full/rAUPOJQs0" width="400px" height="400px" frameborder="0" style="display: block; margin: 0 auto;"></iframe>
         </div>
     </div>
 </body>
