--- a/bcsup.html
+++ b/bcsup.html
@@ -50,6 +50,7 @@
             flex-direction: column;
         }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body>
     <div class="container">
