--- a/bcsup.html
+++ b/bcsup.html
@@ -55,7 +55,7 @@
 <body>
     <div class="container">
         <div id="quadrant1">
-          💻  BIOTECH CODING SANDBOX
+          💻  BIOTECH CODING SANDBOX.
         </div>
         <div id="quadrant2">
             <iframe src="https://vu.fr/bcsup" title="BIOTECH CODE"></iframe>
