--- a/bcsup.html
+++ b/bcsup.html
@@ -50,12 +50,14 @@
             flex-direction: column;
         }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    
+        
+        <meta name="viewport" content="width=device-width, height=device-height,  initial-scale=0.5, user-scalable=no;user-scalable=0;"/>
 </head>
 <body>
     <div class="container">
         <div id="quadrant1">
-          💻  BIOTECH CODING SANDBOX.
+          💻  BIOTECH CODING SANDBOX..
         </div>
         <div id="quadrant2">
             <iframe src="https://vu.fr/bcsup" title="BIOTECH CODE"></iframe>
